[gd_scene load_steps=17 format=3 uid="uid://g4cgcehjl82k"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_qmg1m"]
[ext_resource type="Texture2D" uid="uid://dnd3msk8mq2b4" path="res://assets/textures/orange.png" id="2_6ph0j"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_ebo6e"]
[ext_resource type="Script" path="res://scripts/states/player_idle.gd" id="4_bgiyy"]
[ext_resource type="Script" path="res://scripts/states/player_move.gd" id="5_87axk"]
[ext_resource type="Script" path="res://scripts/states/player_jump.gd" id="6_xqyd6"]
[ext_resource type="Script" path="res://scripts/states/player_takedmg.gd" id="7_p25r1"]
[ext_resource type="Script" path="res://scripts/health_component.gd" id="7_v6ldb"]
[ext_resource type="Script" path="res://scripts/hurtbox_component.gd" id="8_iupyn"]
[ext_resource type="Script" path="res://scripts/states/player_death.gd" id="8_v35cr"]
[ext_resource type="Script" path="res://scripts/states/player_attack.gd" id="9_oj1nr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x5aay"]

[sub_resource type="BoxMesh" id="BoxMesh_i1ih4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q0ik5"]
albedo_texture = ExtResource("2_6ph0j")

[sub_resource type="BoxMesh" id="BoxMesh_btonr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rj5w1"]
size = Vector3(1.21436, 1.22961, 3.30811)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_qmg1m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_x5aay")

[node name="Rig" type="Node3D" parent="."]

[node name="CSGMesh3D" type="CSGMesh3D" parent="Rig"]
mesh = SubResource("BoxMesh_i1ih4")
material = SubResource("StandardMaterial3D_q0ik5")

[node name="FrontIndicatorMesh" type="CSGMesh3D" parent="Rig"]
transform = Transform3D(0.367728, 0, 0, 0, 0.224498, 0, 0, 0, 0.210745, 0, 0.2, -0.538)
mesh = SubResource("BoxMesh_btonr")

[node name="Hitbox3D" type="Area3D" parent="Rig"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rig/Hitbox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000732422, 0.114807, -1.15405)
shape = SubResource("BoxShape3D_rj5w1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.690049, 0.723762, 0, -0.723762, 0.690049, -4.34436e-07, 9.52555, 8.14876)
current = true
far = 100.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_ebo6e")
initial_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_bgiyy")

[node name="PlayerMove" type="Node" parent="StateMachine"]
script = ExtResource("5_87axk")

[node name="PlayerJump" type="Node" parent="StateMachine"]
script = ExtResource("6_xqyd6")

[node name="PlayerTakeDMG" type="Node" parent="StateMachine"]
script = ExtResource("7_p25r1")

[node name="PlayerDeath" type="Node" parent="StateMachine"]
script = ExtResource("8_v35cr")

[node name="PlayerAttack" type="Node" parent="StateMachine"]
script = ExtResource("9_oj1nr")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_v6ldb")
health = 100
max_health = 100

[node name="HurtboxComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("8_iupyn")
health_component = NodePath("../HealthComponent")

[node name="StateLabel" type="Label" parent="."]
offset_right = 150.0
offset_bottom = 30.0
text = "State: PlayerIdle"
horizontal_alignment = 1

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RecoveryTimer" to="." method="_on_recovery_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
